--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <section class="top-section" style="background-image: url('static/assets/img/F1020018.JPG');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
@@ -116,11 +116,11 @@
     <!-- Top Section -->
 
     <!-- Photo -->
-    <div class="container px-5">
+    <!-- <div class="container px-5">
         <div id="avatar">
             <img class="shadow" src="static/assets/img/photo.png">
         </div>
-    </div>
+    </div> -->
     <!-- Photo -->
     
     <!-- Home -->
