--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                 <div id="copyright-text" class="mb-2"></div>
                 <a id="github-link" href="https://github.com/viccollado">Github</a>
                 <span class="mx-1">&middot;</span>
+                <a id="linkedin-link" href="https://www.linkedin.com/in/victorcolladof/">Linkedin</a>
+                <span class="mx-1">&middot;</span>
                 <a id="license-link" href="https://github.com/viccollado/viccollado.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
