--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="projects.html">PROJECTS</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -116,11 +118,11 @@
     <!-- Top Section -->
 
     <!-- Photo -->
-    <!-- <div class="container px-5">
+    <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="static/assets/img/F1020013_circular.png">
         </div>
-    </div> -->
+    </div>
     <!-- Photo -->
     
     <!-- Home -->
