[VCF] Add project boxes

--- a/projects.html
+++ b/projects.html
@@ -81,17 +81,65 @@
         </div>
     </nav>
 
-    <!-- About Section -->
+    <!-- Projects Section -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="projects">
         <div class="container px-5" style="margin-top: 100px;">
             <header>
                 <h2 id="projects-subtitle"><i class="bi bi bi-terminal-fill"></i>&nbsp;PROJECTS</h2>
             </header>
             <div class="main-body">
-                <p>Hello! I'm Victor Collado, currently working in the Department of Statistics at Universidad Carlos III de Madrid.</p>
-                <p>My research interests include Operation Research, Machine Learning, Artificial Intelligence, Statistics, Data Science, and Extreme Value Analysis.</p>
-                <p>Feel free to contact me at <a href="mailto:vicollad@pa.uc3m.es">vicollad@pa.uc3m.es</a> or connect on <a href="https://www.linkedin.com/in/victorcolladof/">LinkedIn</a>.</p>
+                
             </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 py-4 px-3">
+            <div class="col project-card-col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queen's Game</h5>
+                        <p class="card-text flex-grow-1">
+                            A brief description of the Queen's Game project goes here. Explain what it does or why it's interesting.
+                        </p>
+                        <a href="projects/queens_game.html" class="btn btn-primary mt-auto">View Project</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col project-card-col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                        <p class="card-text flex-grow-1">
+                            Short description of another project.
+                        </p>
+                        <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more cards as needed -->
+            <div class="col project-card-col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                        <p class="card-text flex-grow-1">
+                            Short description of another project.
+                        </p>
+                        <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col project-card-col">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                        <p class="card-text flex-grow-1">
+                            Short description of another project.
+                        </p>
+                        <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </section>
 
