[VCF] Add dark mode and changes in text and references

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Navigation-->
     <nav class="header navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
-            <a id="page-top-title" class="navbar-brand fw-bold" href="#page-top"></a>
+            <a id="page-top-title" class="navbar-brand fw-bold brand-colored" href="#page-top"></a>
             <!-- <a href="#page-top"><img src="static/assets/img/CUMT_LOGO.svg" style="width: 11rem;"></a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,6 +104,10 @@
                     </li>
                 </ul>
             </div>
+            <!-- Dark Mode button -->
+            <button id="darkModeToggle" class="btn btn-outline-light ms-3" type="button">
+                <i class="bi bi-moon dark-icon"></i>
+            </button>
         </div>
     </nav>
 
