--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,10 @@
                     </li>
                 </ul>
             </div>
+            <!-- Dark Mode button -->
+            <button id="darkModeToggle" class="btn btn-outline-light ms-3" type="button">
+                <i class="bi bi-moon dark-icon"></i>
+            </button>
         </div>
     </nav>
 
@@ -115,9 +119,9 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queen's Game</h5>
                             <p class="card-text flex-grow-1">
-                                A brief description of the Queen's Game project goes here. Explain what it does or why it's interesting.
+                                Automatic bot to solve the Linkedin Queens Game based on a Mixed-Integer Linear Programming problem. 
                             </p>
-                            <a href="projects/queens_game.html" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/viccollado/QueensGame" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
