[VCF] Change menu color and add Bluemath in projects

--- a/projects.html
+++ b/projects.html
@@ -74,8 +74,8 @@
     <!-- Navigation (copy from index.html) -->
     <nav class="header navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-5">
-            <a class="navbar-brand fw-bold" href="index.html">Victor Collado Fernández</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+            <a class="navbar-brand fw-bold brand-colored" href="index.html">Victor Collado Fernández</a>
+            <button class="navbar-toggler brand-colored" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 MENU
                 <i class="bi-list"></i>
@@ -117,22 +117,22 @@
                 <div class="col project-card-col">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queen's Game</h5>
+                            <h5 class="card-title mb-2"><i class="bi bi-box me-2"></i>Bluemath Python Package</h5>
                             <p class="card-text flex-grow-1">
-                                Automatic bot to solve the Linkedin Queens Game based on a Mixed-Integer Linear Programming problem. 
+                                Contributing in the statistical part of the Bluemath Python package developed by the <a href="https://geoocean.unican.es/">GeoOcean</a> of University of Cantabria.
                             </p>
-                            <a href="https://github.com/viccollado/QueensGame" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/GeoOcean/BlueMath_tk" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col project-card-col">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                            <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queen's Game</h5>
                             <p class="card-text flex-grow-1">
-                                Short description of another project.
+                                Automatic bot to solve the Linkedin Queens Game based on a Mixed-Integer Linear Programming problem. 
                             </p>
-                            <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/viccollado/QueensGame" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
