[VCF] Add tango and voronoi projects

--- a/projects.html
+++ b/projects.html
@@ -121,18 +121,18 @@
                             <p class="card-text flex-grow-1">
                                 Contributing in the statistical part of the Bluemath Python package developed by the <a href="https://geoocean.unican.es/">GeoOcean</a> of University of Cantabria.
                             </p>
-                            <a href="https://github.com/GeoOcean/BlueMath_tk" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/GeoOcean/BlueMath_tk" target="_blank" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col project-card-col">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queen's Game</h5>
+                            <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Queens Bot</h5>
                             <p class="card-text flex-grow-1">
                                 Automatic bot to solve the Linkedin Queens Game based on a Mixed-Integer Linear Programming problem. 
                             </p>
-                            <a href="https://github.com/viccollado/QueensGame" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/viccollado/QueensGame" target="_blank" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -140,25 +140,39 @@
                 <div class="col project-card-col">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                            <h5 class="card-title mb-2"><i class="bi bi-controller me-2"></i>Tango Bot</h5>
                             <p class="card-text flex-grow-1">
-                                Short description of another project.
+                                Automatic bot to solve the Linkedin Tango Game using a Mixed-Integer Linear Programming problem and a CNN.
                             </p>
-                            <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/viccollado/TangoGame" target="_blank" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col project-card-col">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                            <h5 class="card-title mb-2"><i class="bi bi-grid-fill me-2"></i>Voronoi Diagrams</h5>
                             <p class="card-text flex-grow-1">
-                                Short description of another project.
+                                Draw Voronoi diagrams using Python.
                             </p>
-                            <a href="projects/another_project.html" class="btn btn-primary mt-auto">View Project</a>
+                            <a href="https://github.com/viccollado/VoronoiDiagrams" target="_blank" class="btn btn-primary mt-auto">View Project</a>
                         </div>
                     </div>
                 </div>
+<!--  TO ADD MORE PROJECTS
+                <div class="col project-card-col">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title mb-2"><i class="bi bi-bar-chart-fill me-2"></i>Another Project</h5>
+                            <p class="card-text flex-grow-1">
+                                Description
+                            </p>
+                            <a href="https://github.com/viccollado/VoronoiDiagrams" target="_blank" class="btn btn-primary mt-auto">View Project</a>
+                        </div>
+                    </div>
+                </div>
+
+-->
             </div>
         </div>
     </section>
